--- a/css/hasana.css
+++ b/css/hasana.css
@@ -212,3 +212,11 @@ p.sub-name {
     color: #00512f;
     margin-bottom: 0px;
 }
+.navigation-list {
+    display: flex;
+    align-items: flex-end;
+    justify-content: space-between;
+    background: white;
+    box-shadow: 0px 0px 30px 0px #959191;
+    padding: 10px 30px;
+}
