--- a/css/hasana.css
+++ b/css/hasana.css
@@ -212,11 +212,49 @@ p.sub-name {
     color: #00512f;
     margin-bottom: 0px;
 }
+
+
+/*footer menu*/
+footer {
+    margin-top: 75px;
+}
 .navigation-list {
     display: flex;
     align-items: flex-end;
     justify-content: space-between;
-    background: white;
-    box-shadow: 0px 0px 30px 0px #959191;
-    padding: 10px 30px;
+    padding: 10px;
+    background: rgb(255 255 255 / 48%);
+    border-radius: 20px 20px 0 0;
+    box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+    backdrop-filter: blur(5px);
+    -webkit-backdrop-filter: blur(5px);
+    border: 1px solid rgba(255, 255, 255, 0.3);
+}
+a.btn.position-relative {
+    padding: 0;
+    color: #0c5230;
+}
+.btn .badge {
+    margin-left: 5px;
+    margin-top: 10px;
+}
+i.bi {
+    font-size: 25px;
+}
+a.btn.position-relative {
+    padding: 0;
+    color: #0c5230;
+}
+footer p {
+    font-size: 10px;
+}
+.navigation-icon {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    color: #0c5230;
+}
+.navigation-icon p {
+    margin-bottom: 0;
+    text-shadow: 0 0 3px #4CAF50;
 }
