--- a/css/hasana.css
+++ b/css/hasana.css
@@ -104,62 +104,7 @@ svg.bi.bi-search {
     margin: 10px 0;
 }
 
-/* Numbaring
-.title {
-    font-size: larger;
-}
-ol.style_1 {
-    counter-reset: li;
-    padding-left: 2.5rem;
-    padding: 0.25rem 0 0.25rem 2.75rem;
-}
-ol.style_1 small {
-    opacity: 0.4;
-}
-ol.style_1 ol,
-ol.style_1 ul {
-    padding: 0.75rem 0 0 1.5rem;
-}
-ol.style_1 li {
-    margin-bottom: 0.375rem;
-}
-ol.style_1 > li {
-    position: relative;
-    counter-increment: li;
-    min-height: 2rem;
-    padding-top: 0.1rem;
-    list-style: none;
-    text-align: justify;
-}
-ol.style_1 > li::before,
-ol.style_1 > li::after {
-    position: absolute;
-    display: flex;
-    opacity: 0.35;
-}
-ol.style_1 > li::before {
-    content: counter(li);
-    left: -2.75rem;
-    top: 0;
-    font-size: 12px;
-    height: calc(2rem - 1px);
-    width: calc(2rem - 1px);
-    align-items: center;
-    justify-content: center;
-    border-radius: 50%;
-    border: 1px solid currentcolor;
-    color: #0a512f;
-    opacity: 1;
-}
-ol.style_1 > li::after {
-    content: "";
-    left: -1.75rem;
-    top: calc(2rem + 1px);
-    height: calc(100% - 2.5rem);
-    border-left: 1px solid currentcolor;
-}
 
-/* Numbaring end*/
 
 /*social share*/
 .social-share-btns-container {
@@ -215,6 +160,21 @@ p.sub-name {
 /*Page Section*/
 section.notice {
     margin-top: 75px;
+}
+.hajj-section {
+    height: 100vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.content-box {
+    padding: 20px;
+    background: rgb(255 255 255 / 57%);
+    box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+}
+.content-box p {
+    color: #fff;
+    margin-bottom: 0;
 }
 /*Notification*/
 .callout {
