--- a/resources/css/hasana.css
+++ b/resources/css/hasana.css
@@ -1,10 +1,31 @@
 @font-face {
     font-family: 'Baloo Da 2';
-    src: url('../fonts/hasana/BalooDa2-Regular.woff2') format('woff2');
-    font-weight: 400;
     font-style: normal;
+    font-weight: 400;
+    font-display: swap;
+    src: url('../fonts/BalooDa2-Regular.ttf') format('truetype');
 }
-
+@font-face {
+    font-family: 'Baloo Da 2';
+    font-style: normal;
+    font-weight: 500;
+    font-display: swap;
+    src: url('../fonts/BalooDa2-Medium.ttf') format('truetype');
+}
+@font-face {
+    font-family: 'Baloo Da 2';
+    font-style: normal;
+    font-weight: 600;
+    font-display: swap;
+    src: url('../fonts/BalooDa2-SemiBold.ttf') format('truetype');
+}
+@font-face {
+    font-family: 'Baloo Da 2';
+    font-style: normal;
+    font-weight: 700;
+    font-display: swap;
+    src: url('../fonts/BalooDa2-Bold.ttf') format('truetype');
+}
 /* --- CSS Variables --- */
 :root {
     --primary-color: #01512f;
@@ -922,3 +943,5 @@ body.dark-mode .prayer-header {
 .prayer-time-card.next-prayer .end-time {
     color: rgba(255, 255, 255, 0.8);
 }
+
+
